Refactored spring sample